--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -11,6 +11,7 @@
 			<div class="inputHolder">CountryCode: <input type="text" id="countryCode" name="countryCode" value="US"/><br></div>
 			<div class="inputHolder">ShopperLocale: <input type="text" id="shopperLocale" name="shopperLocale" value="en-US"/><br></div>
 			<div class="inputHolder">ShopperReference: <input type="text" id="shopperReference" name="shopperReference" value="localhostCheckout1"/><br></div>
+			<div class="inputHolder">ShopperEmail: <input type="text" id="shopperEmail" name="shopperEmail" value="testshopper@adyen.com"/><br></div>
 			<div class="inputHolder">Channel: <input type="text" id="channel" name="channel" value="Web"/><br></div>
 			<input type="button" class="submitBtn center" id="checkoutBtn" value="Checkout"/>
 		</form>
